# src/main/java/org/superquinquin/releve/ReleveDto.java
@@ -6,5 +6,5 @@ import java.time.LocalDate;
 import java.util.List;
 
 @Schema(requiredProperties = {"date", "lines"})
-public record ReleveDto(LocalDate date, List<ReleveLineDto> lines) {
+public record ReleveDto(Long id, LocalDate date, List<ReleveLineDto> lines) {
 }
